--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext {
         compose_version = '1.2.0-alpha07'
+        nav_version = '2.5.1'
     }
     repositories {
         google()
